--- a/collaborationsync/collaborationsync.csproj
+++ b/collaborationsync/collaborationsync.csproj
@@ -23,56 +23,86 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="TXTextControl.Web" Version="28.0.802.500" />
+    <PackageReference Include="TXTextControl.Web" Version="31.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="TXBarcode">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXBarcode.dll</HintPath>
+    </Reference>
+    <Reference Include="TXBarcode.Windows.Forms">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXBarcode.Windows.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="TXDocumentServer">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\TXDocumentServer.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDocumentServer.dll</HintPath>
+    </Reference>
+    <Reference Include="TXDocumentServer.Web.DocumentViewer">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDocumentServer.Web.DocumentViewer.dll</HintPath>
+    </Reference>
+    <Reference Include="TXDrawing">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDrawing.dll</HintPath>
+    </Reference>
+    <Reference Include="TXDrawing.Windows.Forms">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDrawing.Windows.Forms.dll</HintPath>
     </Reference>
     <Reference Include="txic">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\bin64\txic.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txic.dll</HintPath>
+    </Reference>
+    <Reference Include="TXImageProvider">
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXImageProvider.dll</HintPath>
     </Reference>
     <Reference Include="txkernel">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\bin64\txkernel.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txkernel.dll</HintPath>
     </Reference>
     <Reference Include="txpdf">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\bin64\txpdf.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\txpdf.dll</HintPath>
     </Reference>
     <Reference Include="TXTextControl">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\TXTextControl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXTextControl.dll</HintPath>
     </Reference>
     <Reference Include="TXTextControl.Server">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\TXTextControl.Server.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXTextControl.Server.dll</HintPath>
     </Reference>
     <Reference Include="txtools">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 28.0.NET for Windows Forms\Assembly\bin64\txtools.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txtools.dll</HintPath>
     </Reference>
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="tx28_css.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="tx28_doc.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx28_dox.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="tx28_htm.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="tx28_pdf.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="tx28_rtf.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="tx28_xlx.dll">
+    <None Update="tx28_xml.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="tx28_xml.dll">
+    <None Update="tx31_css.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_doc.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_dox.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_htm.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_pdf.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_rtf.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_xlx.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="tx31_xml.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
