--- a/collaborationsync/collaborationsync.csproj
+++ b/collaborationsync/collaborationsync.csproj
@@ -1,110 +1,30 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="licenses.licx" />
   </ItemGroup>
-  <Target Name="WorkaroundMSBuild2836" BeforeTargets="CompileLicxFiles">
-    <PropertyGroup>
-      <_OriginalTargetFrameworkVersion>$(TargetFrameworkVersion)</_OriginalTargetFrameworkVersion>
-      <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    </PropertyGroup>
-  </Target>
-  <Target Name="UndoWorkaroundMSBuild2836" AfterTargets="CompileLicxFiles">
-    <PropertyGroup>
-      <TargetFrameworkVersion>$(_OriginalTargetFrameworkVersion)</TargetFrameworkVersion>
-    </PropertyGroup>
-  </Target>
   <ItemGroup>
     <EmbeddedResource Include="licenses.licx" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="TXTextControl.Web" Version="31.1.0" />
+    <PackageReference Include="TXTextControl.Web" Version="32.1.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="TXBarcode">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXBarcode.dll</HintPath>
-    </Reference>
-    <Reference Include="TXBarcode.Windows.Forms">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXBarcode.Windows.Forms.dll</HintPath>
-    </Reference>
     <Reference Include="TXDocumentServer">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDocumentServer.dll</HintPath>
-    </Reference>
-    <Reference Include="TXDocumentServer.Web.DocumentViewer">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDocumentServer.Web.DocumentViewer.dll</HintPath>
-    </Reference>
-    <Reference Include="TXDrawing">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDrawing.dll</HintPath>
-    </Reference>
-    <Reference Include="TXDrawing.Windows.Forms">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXDrawing.Windows.Forms.dll</HintPath>
-    </Reference>
-    <Reference Include="txic">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txic.dll</HintPath>
-    </Reference>
-    <Reference Include="TXImageProvider">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXImageProvider.dll</HintPath>
-    </Reference>
-    <Reference Include="txkernel">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txkernel.dll</HintPath>
-    </Reference>
-    <Reference Include="txpdf">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\txpdf.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXDocumentServer.dll</HintPath>
     </Reference>
     <Reference Include="TXTextControl">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXTextControl.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXTextControl.dll</HintPath>
     </Reference>
     <Reference Include="TXTextControl.Server">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\TXTextControl.Server.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXTextControl.Server.dll</HintPath>
     </Reference>
-    <Reference Include="txtools">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 31.0.NET Server for ASP.NET\Assembly\bin64\txtools.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="tx28_doc.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx28_htm.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx28_rtf.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx28_xml.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_css.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_doc.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_dox.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_htm.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_pdf.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_rtf.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_xlx.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="tx31_xml.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
