--- a/collaborationsync/collaborationsync.csproj
+++ b/collaborationsync/collaborationsync.csproj
@@ -1,30 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="licenses.licx" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="licenses.licx" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="TXTextControl.Web" Version="32.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="TXDocumentServer">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXDocumentServer.dll</HintPath>
-    </Reference>
-    <Reference Include="TXTextControl">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXTextControl.dll</HintPath>
-    </Reference>
-    <Reference Include="TXTextControl.Server">
-      <HintPath>..\..\..\..\..\..\Program Files\Text Control GmbH\TX Text Control 32.0.NET Server for ASP.NET\Assembly\TXTextControl.Server.dll</HintPath>
-    </Reference>
+    <PackageReference Include="TXTextControl.TextControl.ASP.SDK" Version="33.0.1" />
+    <PackageReference Include="TXTextControl.Web" Version="33.1.0" />
   </ItemGroup>
 
 </Project>
